Thu Jun 25 17:22:46 1998  Havoc Pennington  <hp@pobox.com>

	* AUTHOR-INFO: Added a comment that one should use the ChangeLog
