@@ -13,14 +13,11 @@ debian-tutorial.text : debian-tutorial.sgml
 debian-tutorial.html : debian-tutorial.sgml
 	debiandoc2html debian-tutorial.sgml
 
-CHANGELOG : CVS/Entries
-	cvs log . > CHANGELOG
-
-debian-tutorial.tar : CHANGELOG outputs COPYING
-	chmod 644 debian-tutorial.text debian-tutorial.ps CHANGELOG
+debian-tutorial.tar : ChangeLog outputs COPYING
+	chmod 644 debian-tutorial.text debian-tutorial.ps ChangeLog
 	chmod 755 debian-tutorial.html
 	chmod 644 debian-tutorial.html/*
-	tar --create --file=debian-tutorial.tar debian-tutorial.ps debian-tutorial.text debian-tutorial.html debian-tutorial.sgml CHANGELOG COPYING
+	tar --create --file=debian-tutorial.tar debian-tutorial.ps debian-tutorial.text debian-tutorial.html debian-tutorial.sgml ChangeLog COPYING
 	chmod 644 debian-tutorial.tar
 
 debian-tutorial.tar.gz : debian-tutorial.tar
