@@ -28,16 +28,16 @@
 
       <p>This manual is meant to be read in order; each chapter
 	assumes some knowledge of prior chapters, though you may find
-	it useful to skip around. If you find yourself getting bogged
-	down, go ahead and move on to another topic.
-	
+	it useful to skip around.
+
       <p>There is also a Debian Reference Guide planned, which will be
 	more comprehensive but less introductory.
 	
       <p>This tutorial assumes that you have already installed and
 	configured Debian GNU/Linux according to the installation
-	manual. However, you may want to look over it before you
-	install to learn more about Debian.
+	manual (which is incomplete as of this writing). However, you
+	may want to look over the tutorial before you install, in
+	order to learn more about Debian.
 
       <p>In general this tutorial tries to explain the reasons for
 	things, and help you understand what's going on inside the
@@ -46,12 +46,13 @@
 	theory, history, and fun facts thrown in with the "How To"
 	aspects of the manual.
 	
-      <p>Please send comments about this manual to [FIXME email
-	address]. We're especially interested in whether it was
-	helpful to you, and how we could make it better. If you get
-	confused while reading, or notice that we use a term without
-	explaining it first, please email us.  [FIXME or should we ask
-	for bug reports?]
+      <p>Please send comments about this manual to <url
+	id="mailto:debian-doc@lists.debian.org"
+	name="debian-doc@lists.debian.org">.  We're especially
+	interested in whether it was helpful to you, and how we could
+	make it better. If you get confused while reading, or notice
+	that we use a term without explaining it first, please email
+	us.  [FIXME or should we ask for bug reports?]
 	
       <p>DO NOT send the authors technical questions about Debian, as
 	there are other forums for that. See [FIXME insert reference
@@ -59,7 +60,7 @@
 	itself to the above address.
 
       <p>To find the latest version of this manual, go [FIXME
-      wherever]
+	wherever]
     
     <chapt id="introduction"> <heading> Introduction </heading>
 
@@ -69,57 +70,45 @@
 	  computer. An operating system is the set of basic programs
 	  and utilities that make your computer run. At the core of an
 	  operating system is the kernel. The kernel is the most
-	  fundamental program on the computer and does all the basic
-	  housekeeping and let's you start other programs. Debian uses
+	  fundamental program on the computer: it does all the basic
+	  housekeeping and lets you start other programs. Debian uses
 	  the <em>Linux</em> kernel, a completely free piece of
 	  software started by Linus Torvalds and supported by
 	  (probably over 1000) programmers worldwide. A large part of
 	  the basic tools that fill out the operating system come from
-	  <em>GNU</em>, which are also free. Of course, the thing that
-	  people want is software. Tools to help them get what they
-	  want to do done, from editing documents to running a
-	  business to playing games to writing more software. Debian
-	  comes with over 1000 <em>packages</em> (precompiled software
-	  bundled up in a nice format for easy installation on your
-	  machine) - all of it free.
+	  the <em>GNU project</em> (<url id="http://www.gnu.org"
+	  name="www.gnu.org">), and these tools are also free. Of
+	  course, the thing that people want is application
+	  software. Programs to help them get what they want to do
+	  done, from editing documents to running a business to
+	  playing games to writing more software. Debian comes with
+	  over 1000 <em>packages</em> (precompiled software bundled up
+	  in a nice format for easy installation on your machine) ---
+	  all of it free.
 
 	<p>It's a bit like a tower. At the base is Linux. On top of
 	  that are all the basic tools, mostly from GNU. Next is all
-	  the software that you run on the computer: much of this is
-	  also from GNU. At the top of the tower is Debian - carefully
-	  organizing and fitting everything together so it all works
-	  together nicely.
+	  the application software that you run on the computer: much
+	  of this is also from GNU. The Debian developers act as
+	  architects and coordinators --- carefully organizing the
+	  system and fitting everything together into an integrated,
+	  stable operating system: Debian GNU/Linux.
 
 	<sect1 id="introduction-debian-os">What's an operating system,
 	    and what sort of operating system is Debian?
 
-	  <p> <em> Note: this section goes into some detail. You may
-	      want to skip it at first. </em>
-	    
-	  <p>An operating system's primary purpose is to support
-	    programs that actually do the work you're interested
-	    in. For instance, you may be using an editor so you can
-	    create a document. This editor could not do its work
-	    without help from the operating system---it needs this
-	    help for interacting with your terminal, your files, and
-	    the rest of the computer.
-	    
-	  <p>If all the operating system does is support your
-	    applications, why do you need a whole book just to talk
-	    about the operating system?  There are lots of routine
-	    maintenance activities (apart from your major programs)
-	    that you may need to do.  In the case of GNU/Linux, the
-	    operating system also contains a lot of
-	    "mini-applications" to help you do your work more
-	    efficently.  And you'll need to use the operating system's
-	    facilities for installing and running applications.
+	  <p>An operating system is a collection of programs that make
+	    your computer useful. It's the software system that
+	    allows you to create and organize files, communicate over
+	    the network, coexist with other users on the system, and
+	    do your work. 
 
 	  <p>Debian GNU/Linux is based on the Unix operating system,
-	    defined by the Posix and X/Open standards. Unix has a long
-	    history (FIXME see appendix). Debian is almost fully
-	    compliant with the Posix standard, though the
-	    certification suite costs a significant amount of money so
-	    it is not officially certified.
+	    defined by the Posix and X/Open specifications. Unix has a
+	    long history (FIXME see appendix). Debian is almost fully
+	    compliant with these standards, though the certification
+	    process costs a significant amount of money so it is not
+	    officially certified.
 
 	  <p>Operating systems can be simple and minimalist, like DOS,
 	    or big and complex, like OS/2 or VMS.  Unix tries to be a
@@ -136,17 +125,18 @@
 	    if new utilities appear (and they do), you can integrate
 	    them into your old toolbox.  To write a document like this
 	    one, for example, one might use many programs actively:
-	    <prgn>fvwm</prgn> to manage my "windows", <prgn> emacs
+	    <prgn>fvwm</prgn> to manage my "windows," <prgn> Emacs
 	    </prgn> to edit the text, <prgn>LaTeX</prgn> to format it,
 	    <prgn>xdvi</prgn> to preview it, <prgn>dvips</prgn> to
 	    prepare it for printing and then <prgn>lpr</prgn> to print
 	    it.  If there was a different dvi previewer available, I
 	    could use that instead of <prgn>xdvi</prgn> without
 	    changing my other programs.  At any given time, the system
-	    will be running 50 or 60 programs to support a single
-	    user. With multiple users, you'd expect hundreds.  Of
-	    course, most of these are started automatically by the
-	    system, so you don't have to worry about them.
+	    could be running dozens of programs to support a single
+	    user. With multiple users, you'd expect hundreds of
+	    programs to be active.  Of course, most of these are
+	    started automatically by the system, so you don't have to
+	    worry about them.
 
 	  <p>When you're using an operating system, you want to
 	    minimize the amount of work you put into getting your job
@@ -157,55 +147,105 @@
 	    tools to use in what situations, and how to tie these
 	    various tools together.
 
-	  <p>The key part of an operating system is called the
-	    <em>kernel</em>.  The Linux kernel supplies functions for
-	    running programs to use, and schedules them to be run.  It
-	    basically says program A can get so much time, program B
-	    can get this much time, and so on.  A kernel is always
+	  <p>The central part of an operating system is called the
+	    <em>kernel</em>.  The Linux kernel is a program which
+	    coordinates the other programs, distributing resources
+	    among them and providing basic services such as files and
+	    networking for programs to use.  A kernel is always
 	    running: it is the first program to start when the system
 	    is turned on, and the last program to do anything when the
 	    system is halted.
 	    
-	<sect1> Other stuff...
-	  <p> A group of volunteers, a GNU/Linux distribution, etc.
+	<sect1 id="introduction-debian-how"> Who creates Debian?
+
+	  <p>Debian is an all-volunteer internet development
+	    project. There are hundreds of volunteers producing the
+	    distribution; most volunteers are in charge of a small
+	    number of software packages. In general, volunteers are
+	    intimately familiar with the software they package, and
+	    use it themselves in their work.
+
+	  <p>These volunteers work together by following a strict set
+	    of guidelines governing how packages are assembled.  These
+	    guidelines are developed cooperatively, by discussing how
+	    the system as a whole should work on internet mailing
+	    lists and <em>internet relay chat</em> (IRC) forums.
 	    
-	  <p> What's an operating system (OS).
-	  <p> What's GNU/Linux mean
-	  <p> Kernel vs. system software - Debian is not just an OS.
+	</sect1>
 
       <sect id="introduction-DFSG"> What's free software?  
 
-	<p>"Free software" refers to freedom not price. Debian is free
-	  in this sense: you are free to modify and redistribute it,
-	  and will always have access to the source code for this
-	  purpose.  The Debian Free Software Guidelines describe in
-	  more detail exactly what is meant by "free." The Free
-	  Software Foundation is another source of information.
+	<p>When Debian developers and users speak of "free software,"
+	  they refer to <em>freedom</em> rather than price. Debian is
+	  free in this sense: you are free to modify and redistribute
+	  it, and will always have access to the source code for this
+	  purpose.  The <url
+	  id="http://www.debian.org/social_contract#guidelines"
+	  name="Debian Free Software Guidelines"> describe in more
+	  detail exactly what is meant by "free." The <url
+	  id="http://www.fsf.org" name="Free Software Foundation">,
+	  originator of the GNU project, is another source of
+	  information. You can find a more detailed discussion of free
+	  software at <url id="http://www.debian.org/intro/free"
+	  name="http://www.debian.org/intro/free">.
+
+	<p>Free software is sometimes called Open Source (TM) software
+	  --- Open Source is a trademark registered by Software in the
+	  Public Interest. Since Open Source is trademarked, only
+	  truly free software can call itself Open Source. You may
+	  encounter vendors who try to mislead you by claiming their
+	  software is "free," while in reality it has significant
+	  strings attached.  The Open Source trademark gives you some
+	  assurance that the software really is free software.
 
 	<p>You may be wondering: why would people spend hours of their
 	  own time to write software, carefully package it, and then
 	  give it all away? The answers are as varied as the people
-	  who contribute. Some people like to help others. Many write
-	  programs to learn more about computers. More and more people
-	  are looking for ways to avoid the inflated price of
+	  who contribute. Some people like to help others. Others
+	  believe in sharing information and having the freedom to do
+	  so. Many want to learn more about computers. More and more
+	  people are looking for ways to avoid the inflated price of
 	  commercial software. A growing crowd contribute as a thank
 	  you for all the great free software they've received from
 	  others. Many in academia create free software to help get
 	  the results of their research into wider use. Businesses
 	  help maintain free software so they can have a say in how it
-	  develops -- there's no quicker way to get a new feature than
-	  to implement it yourself! Of course, a lot of us just find
-	  it great fun.
+	  develops --- there's no quicker way to get a new feature
+	  than to implement it yourself! Still others see free
+	  software as a social good, democratizing access to
+	  information preventing excessive centralization of the
+	  world's information infrastructure. Of course, a lot of us
+	  just find it great fun.
 
-	  <p>Debian is so committed to free software that we thought
-	  it would be useful if it was formalized in a document of
-	  some sort. Thus, our Social Contract was born.
+	<p>Debian is so committed to free software that we thought it
+	  would be useful if it was formalized in a document of some
+	  sort. Our <url id="http://www.debian.org/social_contract"
+	  name="Social Contract"> promises that Debian will always be
+	  100% free software. When you download a package from the
+	  Debian main distribution, you can be sure it meets our Free
+	  Software Guidelines.
+	  
+	<p>Although Debian believes in free software, there are cases
+	  where people want or need to put proprietary software on
+	  their machine. Whenever possible Debian will support this;
+	  though proprietary software is not included in the main
+	  distribution, it is sometimes available on the ftp site, and
+	  there are a growing number of packages whose sole job is to
+	  install proprietary software we are not allowed to
+	  distribute ourselves.
 
-	  <p>Although Debian believes in free software, there are
-	  cases where people want or need to put commercial software
-	  on their machine. Whenever possible Debian will support
-	  this. There are even a growing number of packages whose sole
-	  job is to install commercial software into a Debian system.
+	<p>It is important to distinguish <em>commercial</em> software
+	  from <em>proprietary</em> software. Proprietary software is
+	  non-free software, while commercial software is software
+	  sold for money. Debian permits commercial software to be a
+	  part of the main distribution, but not proprietary software.
+	  Remember that the phrase "free software" does not refer to
+	  price; it is quite possible to sell free software. For more
+	  clarification of the terminology, see <url
+	  id="http://www.opensource.org"
+	  name="http://www.opensource.org"> or <url
+	  id="http://www.fsf.org/philosophy/categories.html"
+	  name="http://www.fsf.org/philosophy/categories.html">. 
 	  
       <sect id="introduction-why"> Why should I use Debian? 
 
@@ -1259,9 +1299,9 @@
 	    them? Maybe a "kill" in there? also a return to "ps" to show
 	    the relationship with shell jobs?
 	<p>In the <tt>bash</tt> shell there are lots of different things to do.
-	   First lets use <ex>Command Completion</ex>.  Command Completion is probably
+	   First lets use <em>Command Completion</em>.  Command Completion is probably
  	   The best thing a Unix shell could offer.  Lets see how this works.
-	   From the $ prompt try typing in <ex>whoa</ex> then hitting the
+	   From the $ prompt try typing in <em>whoa</em> then hitting the
 	   <tt>tab</tt> key.  What should happen is you should see the command
 	   <tt>whoami</tt> show up.  Then you can hit the <tt>enter</tt>key, and
 	    the <tt>whoami</tt> command will run.  Of course this command should
@@ -1274,10 +1314,10 @@
 	   or to always give you special command lines for each command.  I transgress,
 	   Lets continue.  If you then type in <tt>CTRL+Z</tt>That's the <tt>Control</tt>
 	   key and the <tt>Z</tt> key at the same time, you will notice that you will be taken
-	   back to a command prompt.  What we just did id <ex>Background a Process</ex>.
+	   back to a command prompt.  What we just did id <em>Background a Process</em>.
 	<p>Backgrounding a process is handy, because it lets you suspend commands, or programs
 	   so you can do something real quick, and then get back to where we left off.
-	  The <tt>CTRL+Z</tt> is called the <ex>Suspend</ex> command(or key).  Lets type in \\ 
+	  The <tt>CTRL+Z</tt> is called the <em>Suspend</em> command(or key).  Lets type in \\ 
 	   <tt>jobs</tt>.  This command will show you what jobs, or processes you have running.
 	   you should see something similiar to: 
 <example>
