@@ -1,3 +1,12 @@
+Sat Jul  4 16:46:36 1998  Havoc Pennington  <hp@pobox.com>
+
+	* debian-tutorial.sgml: Worked on "What's on OS" and "What's free
+	software sections; took out <ex> tags so the document would
+	compile; misc. little things.
+	* Makefile: Took out auto-generated CHANGELOG in favor of this
+	manual ChangeLog.
+	
+
 Thu Jun 25 17:22:46 1998  Havoc Pennington  <hp@pobox.com>
 
 	* AUTHOR-INFO: Added a comment that one should use the ChangeLog
